--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,130 @@
+@import url('https://fonts.googleapis.com/css?family=Lato');
+
+body, html {
+  font-family: 'Lato', sans-serif;
+  font-size: 16px;
+  margin: 0;
+  padding: 0;
+}
+
+::-webkit-scrollbar {
+  width: 0px;
+  background: transparent;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+  font-size: calc(2rem + (130 - 32) * ((100vw - 300px) / (1600 - 300)));
+  font-weight: 900;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+p {
+  font-size: calc(2rem + (80 - 32) * ((100vw - 300px) / (1600 - 300)));
+}
+
+/*--------------------------LANDING PAGE--------------------------*/
+
+.App-landing {
+  background-color: #000;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 100%;
+  color: #FFF;
+  box-shadow: 0px 2px 20px 10px rgba(0,0,0,0.8);
 }
 
-.App-link {
-  color: #61dafb;
+.LandingPage h1 {
+  font-size: calc(50px + (150 - 50) * ((100vw - 300px) / (1600 - 300)));
+  font-weight: bolder;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.LandingPage span {
+  color: #777DA7;
 }
+
+.Links a {
+  font-size: calc(2rem + 2vmin);
+  padding: 0.5rem;
+  color: #FFF;
+  transition: 0.5s color;
+}
+
+.Links a:hover {
+  color: #777DA7; 
+}
+
+/*-------------------------------BIO------------------------------*/
+
+.App-bio {
+  color: #000;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.BioPage {
+  position: fixed;
+  z-index: -1;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  padding: 3rem;
+}
+
+.BioPage span {
+  color: #777DA7; 
+}
+
+/*----------------------------------------------------------------*/
+
+/*-----------------------------SKILLS-----------------------------*/
+
+.App-skills {
+  background-color: #000;
+  color: #FFF;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0px 2px 20px 10px rgba(0,0,0,0.8);
+  box-shadow: 0px -2px 20px 10px rgba(0,0,0,0.8);
+}
+
+.SkillsPage {
+  padding: 3rem;
+}
+
+.SkillsPage b {
+  color: #777DA7;
+}
+
+.SkillsPage .arrows {
+  color: #777DA7;
+}
+
+.SkillsPage i {
+  padding: 0.5rem;
+}
+
+/*----------------------------------------------------------------*/
+
+/*----------------------------FOOTER------------------------------*/
+
+#footer a {
+  color: #000;
+  padding: 0.5rem;
+  transition: 0.5s color;
+}
+
+#footer a:hover {
+  text-decoration: none;
+  color: #777DA7; 
+}
+
+/*----------------------------------------------------------------*/
