--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@ p {
 .App-landing {
   color: #FFF;
   background-color: #000;
-  height: 100vh;
+  min-height: 100vh;
   width: 100vw;
   display: flex;
   flex-direction: column;
@@ -67,7 +67,7 @@ p {
 
 .App-bio {
   color: #000;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
 }
@@ -93,7 +93,7 @@ p {
 .App-skills {
   background-color: #000;
   color: #FFF;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   position: relative;
@@ -133,7 +133,6 @@ p {
   background-color: #FFF;
   display: flex;
   flex-direction: column;
-  position: relative;
   padding: 2rem;
 }
 
@@ -142,7 +141,7 @@ p {
 }
 
 .ProjectsPage h2 {
-  font-size: calc(2rem + (80 - 32) * ((100vw - 300px) / (1600 - 300)));
+  font-size: calc(2rem + (60 - 32) * ((100vw - 300px) / (1600 - 300)));
 }
 
 .ProjectsPage a {
@@ -165,19 +164,27 @@ p {
 /*----------------------------FOOTER------------------------------*/
 
 .App-footer {
+  color: #FFF;
   background-color: #000;
   box-shadow: 0px -2px 20px 10px rgba(0,0,0,0.8);
   position: relative;
+  display: flex;
+  flex-direction: column;
   z-index: 10;
 }
 
-#footer a {
+.footer {
+  padding: 2rem;
+}
+
+.footer a {
   color: #FFF;
   padding: 0.5rem;
   transition: 0.5s color;
+  justify-content: center;
 }
 
-#footer a:hover {
+.footer a:hover {
   color: #777DA7;
   text-decoration: none;
 }
