--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@ p {
 
 .App-landing {
   color: #FFF;
-  background-color: #000;
+  background-color: #14171d;
   min-height: 100vh;
   width: 100vw;
   display: flex;
@@ -37,7 +37,7 @@ p {
   align-items: center;
   justify-content: center;
   position: relative;
-  box-shadow: 0px 2px 20px 10px rgba(0,0,0,0.8);
+  box-shadow: 0px 2px 20px 10px rgba(20, 23, 29, 0.8);
 }
 
 .LandingPage h1 {
@@ -47,7 +47,7 @@ p {
 }
 
 .LandingPage span {
-  color: #777DA7;
+  color: #6AC4A2;
 }
 
 .Links a {
@@ -58,7 +58,7 @@ p {
 }
 
 .Links a:hover {
-  color: #777DA7; 
+  color: #6AC4A2; 
 }
 
 /*----------------------------------------------------------------*/
@@ -66,7 +66,7 @@ p {
 /*-------------------------------BIO------------------------------*/
 
 .App-bio {
-  color: #000;
+  color: #14171d;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -84,7 +84,7 @@ p {
 }
 
 .BioPage span {
-  color: #777DA7; 
+  color: #6AC4A2; 
 }
 
 @media only screen and (max-width: 1025px) {
@@ -119,7 +119,7 @@ p {
 /*-----------------------------SKILLS-----------------------------*/
 
 .App-skills {
-  background-color: #000;
+  background-color: #14171d;
   color: #FFF;
   min-height: 100vh;
   display: flex;
@@ -127,16 +127,12 @@ p {
   position: relative;
   z-index: 10;
   padding: 2rem;
-  box-shadow: 0px 2px 20px 10px rgba(0,0,0,0.8);
+  box-shadow: 0px 2px 20px 10px rgba(20, 23, 29, 0.8);
 }
 
 .SkillsPage b {
-  color: #777DA7;
   font-size: calc(2rem + (65 - 32) * ((100vw - 300px) / (1600 - 300)));
-}
-
-.SkillsPage .arrows {
-  color: #777DA7;
+  color: #6AC4A2;
 }
 
 .SkillsPage i {
@@ -165,18 +161,14 @@ p {
 
 /*----------------------------------------------------------------*/
 
-/*----------------------------------------------------------------*/
+/*------------------------------PROJECTS--------------------------*/
 
 .App-projects {
-  color: #000;
+  color: #14171d;
   background-color: #FFF;
   display: flex;
   flex-direction: column;
   padding: 2rem;
-}
-
-.ProjectsPage .quotes {
-  color: #777DA7;
 }
 
 .ProjectsPage h2 {
@@ -184,7 +176,7 @@ p {
 }
 
 .ProjectsPage a {
-  color: #000;
+  color: #14171d;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -194,7 +186,7 @@ p {
 }
 
 .ProjectsPage a:hover {
-  color: #777DA7;
+  color: #6AC4A2;
   text-decoration: none;
 }
 
@@ -204,8 +196,8 @@ p {
 
 .App-footer {
   color: #FFF;
-  background-color: #000;
-  box-shadow: 0px -2px 20px 10px rgba(0,0,0,0.8);
+  background-color: #14171d;
+  box-shadow: 0px -2px 20px 10px rgba(20, 23, 29, 0.8);
   position: relative;
   display: flex;
   flex-direction: column;
@@ -223,7 +215,7 @@ p {
 }
 
 .footer a:hover {
-  color: #777DA7;
+  color: #6AC4A2;
   text-decoration: none;
 }
 
